// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`object fields additionalProperties 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="form-group field field-object"
  >
    <div
      className="field"
    >
      <div
        className="columns is-gapless"
      >
        <div
          className="column"
        >
           
          <div
            className="form-group field field-string additional-property"
          >
            <div
              className="columns is-gapless"
            >
              <div
                className="column is-3"
              >
                <div
                  className="field"
                >
                  <label
                    className="label"
                    htmlFor="root_foo-key"
                  >
                    Key
                  </label>
                  <div
                    className="control"
                  >
                    <input
                      className="input"
                      defaultValue="foo"
                      disabled={false}
                      id="root_foo-key"
                      name="root_foo-key"
                      onBlur={[Function]}
                      readOnly={false}
                      type="text"
                    />
                  </div>
                </div>
              </div>
              <div
                className="column"
              >
                <div
                  className="field"
                >
                  <label
                    className="label"
                    htmlFor="root_foo"
                  >
                    foo
                  </label>
                  <div
                    className="control"
                  >
                    <input
                      autoFocus={false}
                      className="input"
                      disabled={false}
                      id="root_foo"
                      name="root_foo"
                      onBlur={[Function]}
                      onChange={[Function]}
                      onFocus={[Function]}
                      placeholder=""
                      readOnly={false}
                      required={false}
                      type="text"
                      value="foo"
                    />
                  </div>
                </div>
              </div>
              <div
                className="column is-narrow"
              >
                <button
                  className="button is-danger"
                  disabled={false}
                  onClick={[Function]}
                  title="Remove"
                >
                  <svg
                    fill="currentColor"
                    height="1em"
                    stroke="currentColor"
                    strokeWidth="0"
                    style={
                      {
                        "color": undefined,
                      }
                    }
                    viewBox="0 0 448 512"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M416 208H32c-17.67 0-32 14.33-32 32v32c0 17.67 14.33 32 32 32h384c17.67 0 32-14.33 32-32v-32c0-17.67-14.33-32-32-32z"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="columns is-gapless"
      >
        <div
          className="column"
        />
        <div
          className="column is-narrow"
        >
          <button
            className="button object-property-expand is-info"
            disabled={false}
            onClick={[Function]}
            title="Add Item"
          >
            <svg
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              strokeWidth="0"
              style={
                {
                  "color": undefined,
                }
              }
              viewBox="0 0 448 512"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M416 208H272V64c0-17.67-14.33-32-32-32h-32c-17.67 0-32 14.33-32 32v144H32c-17.67 0-32 14.33-32 32v32c0 17.67 14.33 32 32 32h144v144c0 17.67 14.33 32 32 32h32c17.67 0 32-14.33 32-32V304h144c17.67 0 32-14.33 32-32v-32c0-17.67-14.33-32-32-32z"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
  </div>
  <button
    className="button is-primary"
    disabled={false}
    type="submit"
  >
    Submit
  </button>
</form>
`;

exports[`object fields object 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="form-group field field-object"
  >
    <div
      className="field"
    >
      <div
        className="columns is-gapless"
      >
        <div
          className="column"
        >
           
          <div
            className="form-group field field-string"
          >
            <div
              className="field"
            >
              <label
                className="label"
                htmlFor="root_a"
              >
                A
              </label>
              <div
                className="control"
              >
                <input
                  autoFocus={false}
                  className="input"
                  disabled={false}
                  id="root_a"
                  name="root_a"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  placeholder=""
                  readOnly={false}
                  required={false}
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="columns is-gapless"
      >
        <div
          className="column"
        >
           
          <div
            className="form-group field field-number"
          >
            <div
              className="field"
            >
              <label
                className="label"
                htmlFor="root_b"
              >
                B
              </label>
              <div
                className="control"
              >
                <input
                  autoFocus={false}
                  className="input"
                  disabled={false}
                  id="root_b"
                  name="root_b"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  placeholder=""
                  readOnly={false}
                  required={false}
                  step="any"
                  type="number"
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="button is-primary"
    disabled={false}
    type="submit"
  >
    Submit
  </button>
</form>
`;
